##Text encoding: utf-8

2010-07-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: fixed loading.
	* libs/gcp/bond.h: ditto.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcu/molecule.cc: set "m1" as default Id in constructors.

2010-07-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: do not add an invalid atom in the canvas.
	* libs/gcp/bond.cc: do not add an invalid bond in the canvas.
	* libs/gcp/document.cc: work on loading fixes.
	* libs/gcu/application.cc: add GetApplication() static methods.
	* libs/gcu/application.h: ditto.
	* libs/gcu/bond.cc: do not set the atoms on loading, but wait until all
	atoms are loaded.
	* libs/gcu/document.cc: ditto.
	* libs/gcu/object.cc: fixed a compilation warning. 
	* plugins/paint/selection/lassotool.cc: make copy/paste start working.
	* plugins/paint/selection/lassotool.h: ditto.

2010-07-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/selection/lassotool.cc: select bonds if both atoms
	are inside the path.

2010-07-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/Makefile.am: add gccv::Polygon class.
	* libs/gccv/item.cc: add Item::BuildPath().
	* libs/gccv/item.h: ditto.
	* libs/gccv/polygon.cc: new class.
	* libs/gccv/polygon.h: ditto.
	* libs/gcu/atom.h: add Object::GetCoords().
	* libs/gcu/object.cc: ditto.
	* libs/gcu/object.h: ditto.
	* plugins/paint/selection/lassotool.cc: select atoms inside the path.
	* plugins/paint/selection/lassotool.h: ditto.

2010-06-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/selection/Makefile.am: new lasso tool.
	* plugins/paint/selection/bracketstool.cc: start OnDrag() implementation.
	* plugins/paint/selection/lassotool.cc: new lasso tool.
	* plugins/paint/selection/lassotool.h: ditto.
	* plugins/paint/selection/plugin.cc: ditto.
	* plugins/paint/selection/selectiontool.cc: fixed a critical.

2010-06-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/document.cc: more renaming.