@@ -1,5 +1,10 @@
 ##Text encoding: utf-8
 
+2010-07-13  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcu/bond.cc: enhance loading of invalid files.
+	* libs/gcu/document.cc: ditto.
+	* libs/gcu/document.h: ditto.
+
 2010-07-12  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/bond.cc: fixed loading.
 	* libs/gcp/bond.h: ditto.
